# SinkingStarBench

./: Cargo.toml  README-CN.md  README.md  build.rs
levels/: 1-1.txt  1-2.txt  1-3.txt  1-4.txt  2-1.txt  2-2.txt  2-3.txt  2-4.txt  3-1.txt  3-2.txt  3-3.txt  3-4.txt  README.md
solutions/: 1-1.txt  1-2.txt  1-3.txt  1-4.txt  2-1.txt  2-2.txt  2-3.txt  2-4.txt  3-1.txt  3-2.txt  3-3.txt  3-4.txt
src/: lib.rs  main.rs
