[package]
name = "sinking-star"
version = "0.1.0"
edition = "2024"
description = "CLI player and simulator for Order of the Sinking Star"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
serde = { version = "1.0", features = ["derive"] }

thiserror = "2.0"

[dev-dependencies]
pretty_assertions = "1.4"
